--- a/docs/package.json
+++ b/docs/package.json
@@ -7,7 +7,7 @@
     "yarn": "1.2.1"
   },
   "dependencies": {
-    "bootstrap": "4.0.0-alpha.5",
+    "bootstrap": "^4.1.3",
     "jquery": "3.2.0",
     "jsdoc": "^3.5.5"
   },
